# trinity-hackathon

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Caddyfile  LICENSE  README.md  angel.py  metrics_bridge.py  pyproject.toml  pyrightconfig.json  requirements.txt  security.py  trinity-extension.vsix  trinity.py
.github/workflows/: ci.yml
corpus/brain/: astrocyte.py  axon.py  circadian.py  cortex_mapper.py  dreaming.py  effectors.py  engram.py  evolution.py  evolution_api.py  gattaca.py  hippocampus.py  hormones.py  instinct.py  limbic.py  memory.py  neocortex.py  oracle.py  personality.py  prefrontal.py  reflection.py  synapse_gateway.py  synapses.md  thalamus.py  triggers.py
corpus/dna/: __init__.py  chromosome.json  codons.json  conscience.py  genome.py  phenotype.py  secrets.py
corpus/dopamine/: __init__.py  objectives.py
corpus/soma/: cells.py  hygiene.py  immune.py  nerves.py  organelles.py  reserves.py  senses.py  sentinel.py  voice.py
corpus/soul/: capabilities.py  identity.md  persona.py  (+1 more)
docs/: ANGEL.md  ARCHITECTURE.md  GEMINI_INTEGRATION.md  JULES.md  TRINITY.md
jobs/: __init__.py  loader.py  notifier.py
jules/: api.py  architect.py  config.json  cortex.py  forge.py  gate.py  git_controller.py  git_ops.py  github_client.py  harvest.py  heart.py  jules_client.py  nightly_council.py  nightwatch.py  options_manager.py  pending_manager.py  persistence.py  planning_critic.py  sandbox.py  sanitizer.py  self_review.py  staging.py
scripts/: deploy_android_full.sh  scan.py  trinity.sh
social/: __init__.py  mobile.py
tests/: test_oracle.py
(+250 files in other folders)
